Fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,6 @@ html:not(.can-touch) #navbar.scrolled .svg-link:hover .svg,
 /* profile card */
 
 .profile-card {
-  width: 100%;
   padding-bottom: 10px;
   margin-bottom: 1rem;
 }
@@ -324,7 +323,6 @@ html:not(.can-touch) #navbar.scrolled .svg-link:hover .svg,
 /* tags-card */
 
 .tags-card {
-  width: 100%;
   padding-bottom: 1rem;
 }
 
